--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :date_of_birth %><br>
     <%= f.date_select :date_of_birth %>
   </div>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
