Adding city column to Organizations

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :number_of_employees %><br>
     <%= f.number_field :number_of_employees %>
   </div>
+  <div class="field">
+    <%= f.label :city %><br>
+    <%= f.text_field :city %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
