--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -10,5 +10,10 @@
   <%= @organization.number_of_employees %>
 </p>
 
+<p>
+  <strong>City:</strong>
+  <%= @organization.city %>
+</p>
+
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
